# WebKeyLayer

./: .gitignore  .gitmodules  Cargo.toml  INITIALIZATION_REPORT.md  README.md
backend/: Cargo.toml  README.md
backend/src/: error.rs  keyboard_hook.rs  lib.rs  log.rs  main.rs  mouse_hook.rs  util.rs  websocket_server.rs
backend/src/config/: loader.rs  mod.rs  schema.rs
backend/src/preset/: importer.rs  mod.rs  renderer.rs  schema.rs
backend/src/state/: config_state.rs  keyboard_state.rs  mod.rs  sync.rs
backend/src/ui/: mod.rs  server.rs  tray.rs  webview.rs
docs/: API_PROTOCOL.md  TODO.md  软件需求.md  项目架构设计.md
frontend/: README.md
frontend/admin/: index.html
frontend/admin/css/: admin.css
frontend/admin/js/: admin.js
frontend/public/: index.html
frontend/public/css/: stream.css
frontend/public/js/: stream-client.js
frontend/tests/: stream-layout.test.mjs
