[package]
name = "webkeylayer-backend"
version = "0.1.0"
edition = "2021"
authors = ["WebKeyLayer Contributors"]
description = "A cross-platform keyboard visualization tool for streaming with LAN support"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# WebSocket
tokio-tungstenite = "0.21"
tungstenite = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# System
winit = "0.29"
tray-icon = "0.1"

# File watching and logging
notify = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1"
thiserror = "1"
futures-util = { version = "0.3.32", features = ["sink"] }

# Platform-specific UI
[target.'cfg(windows)'.dependencies]
webview2 = "0.1"
windows = { version = "0.48", features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
wry = "0.24"

# Development
[dev-dependencies]
tokio-test = "0.4"
